[project]
name = "urban-aero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "Pillow>=10.0.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.10",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "phiflow>=3.4.0",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "torch>=2.11.0",
]
